--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,20 @@
+torch
+torchvision
 deepspeed==0.17.0
+accelerate
 toml
-transformers
-git+https://github.com/huggingface/diffusers@50e18ee6982f8006e7247c756c573b8204fe354b
 datasets
 pillow
 sentencepiece
-protobuf
-peft
-torch-optimi
-tensorboard
-tqdm
 safetensors
-bitsandbytes
-imageio[ffmpeg]
-av
-einops
-accelerate
-loguru
-flash-attn==2.8.1
-omegaconf
-iopath
-termcolor
-hydra-core
-easydict
-ftfy
-pytorch-optimizer
 wandb
-optimum-quanto
+tqdm
+numpy
+bitsandbytes
+flash-attn==2.8.1
+scipy
+imageio
+tensorboard
+peft
+# Optional if you read MP4 videos via imageio:
+# imageio-ffmpeg
